Day two version - Add section 1 - Add place holder for section 2 to 4 and footer

--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
                     <li><a href="#">header link three</a></li>
                 </ul>
             </div>
-            <div class="content1"></div>
-            <div class="content2"></div>
-            <div class="content3"></div>
-            <div class="content4"></div>
-            <div class="footer"></div>
+            <div class="content1">
+                <div class="left">
+                    <div id="awesome">This website is awesome</div>
+                    <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                    <button>Sign Up</button>
+                </div>
+                <div class="right">
+                    <div>this is a placeholder for an image</div>
+                </div>
+            </div>
+            <div class="content2">place holder for content2</div>
+            <div class="content3">place holder for content3</div>
+            <div class="content4">place holder for content4</div>
+            <div class="footer">place holder for footer</div>
         </body>
     </head>
 </html>
