--- a/index.html
+++ b/index.html
@@ -24,8 +24,33 @@
                     <div>this is a placeholder for an image</div>
                 </div>
             </div>
-            <div class="content2">place holder for content2</div>
-            <div class="content3">place holder for content3</div>
+            <div class="content2">
+                <div class="info-header">Some random information.</div>
+                <div class="card-container">
+                    <div class="card">
+                        <img>
+                        <div class="text">this is some subtext under and illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <img>
+                        <div class="text">this is some subtext under and illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <img>
+                        <div class="text">this is some subtext under and illustration or image</div>
+                    </div>
+                    <div class="card">
+                        <img>
+                        <div class="text">this is some subtext under and illustration or image</div>
+                    </div>
+                </div>
+            </div>
+            <div class="content3">
+                <div class="quote-container">
+                    <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                    <div class="quote-sign">-Thor, God of Thunder</div>
+                </div>
+            </div>
             <div class="content4">place holder for content4</div>
             <div class="footer">place holder for footer</div>
         </body>
